# jikan

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/jikan/: __init__.py  main.py  models.py
src/jikan/commands/: project.py  tag.py
src/jikan/core/: entry.py  project.py  tag.py
src/jikan/lib/: datetime.py  print.py
tests/: conftest.py  test_main.py  test_project.py  test_tag.py
tests/core/: test_entry.py  test_project.py  test_tag.py
