[project]
name = "jikan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nonmot", email = "nonmot0614@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
jikan = "jikan:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
