[project]
name = "jikan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nonmot", email = "nonmot0614@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "typer>=0.21.1",
]

[project.scripts]
jikan = "jikan.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
